edit text, testing automation in aws Lambda

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
         I am taking my first steps in the cloud.
         Work still in progress, so please stay calm.
         Coffee and earfiles at the cafeteria.
+
+        Phase 1: Testing if the automation is working...
       </p>
 
     <div class="background--skyBlue modal--closed">
